@@ -634,7 +634,7 @@ class TDataGrid extends TBaseDataList implements INamingContainer
 			if(strcasecmp($command,self::CMD_SELECT)===0)
 			{
 				$this->setSelectedItemIndex($param->getItem()->getItemIndex());
-				$this->onSelectedIndexChanged(null);
+				$this->onSelectedIndexChanged($param);
 				return true;
 			}
 			else if(strcasecmp($command,self::CMD_EDIT)===0)
