@@ -14,6 +14,8 @@ ENH: Ticket#206 - Added OnValidate, OnError, OnSuccess events to validators (Qia
 ENH: Ticket#230 - Added TDataList.EmptyTemplate property (Qiang)
 ENH: Ticket#231 - Added TButton.ButtonType property to allow reset button (Qiang)
 ENH: Ticket#232 - Allow <%# %> and <%= %> embedded within property values (Qiang)
+ENH: Ticket#256 - Datagrid columns can now be accessed via IDs (Qiang)
+ENH: Ticket#257 - OnSelectedIndexChanged event of TDataList and TDataGrid now passes the original command parameter (Qiang)
 ENH: TRepeater, TDataList and TDataGrid will store data indices in DataKeys if DataKeyField is not set. (Qiang)
 ENH: Added TPageService.BasePageClass property (Qiang)
 ENH: Added TDataGrid.EmptyTemplate property (Qiang)
